# commit-msg-regex-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CODEOWNERS  LICENSE  README.md  requirements.txt  setup.cfg
commit_msg_regex_hook/: commit_msg_regex_hook.py
src/main/: cli.py
test/: test.py
