[metadata]
name = commit-msg-regex-hook
version = v0.0.5
author = David Tippett
description = Checks if commit message matches supplied regex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dtaivpp/commit-msg-regex-hook.git
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
exclude = test


[options.entry_points]
console_scripts =
    commit-msg-regex-hook = commit_msg_regex_hook:main